<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Coin</string>
    <string name="welcome">Bem-vindo!</string>
    <string name="password">Senha</string>
    <string name="forgot_password_login">Esqueceu a senha?</string>
    <string name="forgot_password">Esqueceu a senha</string>
    <string name="remember_me">Lembre-me</string>
    <string name="login">Logar</string>
    <string name="new_user">Novo usuário?</string>
    <string name="sign_up">Cadastrar-se</string>
    <string name="name">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="date_of_birth">Date de nascimento</string>
    <string name="confirm_code">Confirme o código</string>
    <string name="confirm">Confimar</string>
    <string name="send_code">Enviar código</string>
    <string name="change_password">Alterar senha</string>
    <string name="confirm_new_password">Confirmar nova senha</string>
    <string name="new_password">Nova senha</string>
    <string name="change">Alterar</string>

    <!--Errors-->
    <string name="missing_name">Nome está faltando!</string>
    <string name="select_valid_date">Por favor, escolha uma data válida!</string>
    <string name="missing_email">E-mail está faltando!</string>
    <string name="missing_new_password">A nova senha está faltando!</string>
    <string name="missing_confirmation_password">A senha de confirmação está faltando!</string>
    <string name="password_are_different">As senhas são diferentes!</string>
    <string name="missing_password">Senha está faltando!</string>
    <string name="register_fail">Falha no cadastro!</string>
    <string name="login_fail">Falha no login!</string>
    <string name="email_invalid">Este e-mail não é válido!</string>
    <string name="code_wrong">Código de confirmação está errado!</string>
    <string name="code_invalid">Código de confirmação inválido!</string>
    <string name="missing_old_password">A senha antiga está faltando!</string>
    <string name="old_password_is_wrong">A senha antiga está errada!</string>
    <string name="change_password_fail">Falha ao alterar senha!</string>
    <string name="edit_user_data_fail">Falha ao editar usuário!</string>
    <string name="send_link_fail">Falha: o link não foi enviado!</string>

    <!--Profile-->
    <string name="position_number">1º</string>
    <string name="position">posição</string>
    <string name="points_number">100 pontos</string>
    <string name="points">pontos</string>
    <string name="edit_profile">Editar</string>
    <string name="edit_password">Editar senha</string>
    <string name="logout">Sair</string>
    <string name="old_password">Senha antiga</string>
    <string name="are_you_sure_that_you_wanna_logout">Tem certeza de que deseja sair?</string>
    <string name="naah_just_kidding">Naah, só brincando</string>

    <!--Success messages-->
    <string name="change_password_success">Senha foi alterada!</string>
    <string name="edit_user_data_success">Dados do usuário editados!</string>
    <string name="upload_success">Upload foi um sucesso!</string>
    <string name="upload_fail">Falha no upload!</string>
    <string name="welcome_coma">Bem-vindo,</string>
    <string name="the_best_place_to_learn_about_financial_education">O melhor lugar para aprender sobre educação financeira</string>
    <string name="introduction">Introdução</string>
    <string name="organize_home">Organizar casa</string>
    <string name="action_time">Hora da ação</string>
    <string name="introduction_classes">Aulas introdutórias</string>
    <string name="video_icon">Ícone de vídeo</string>
    <string name="class_title">Aula</string>
    <string name="arrow">Seta</string>
    <string name="lesson_1">Aula 1</string>
    <string name="lesson_2">Aula 2</string>
    <string name="lesson_3">Aula 3</string>
    <string name="lesson_4">Aula 4</string>
    <string name="lesson_5">Aula 5</string>
    <string name="what_s_financial_education">O que é educação financeira</string>
    <string name="organize_your_home">Organize sua casa</string>
    <string name="how_can_we_start">Como podemos começar?</string>
    <string name="define_your_target">Defina seu objetivo</string>
    <string name="the_value_of_tomorrow">O valor de amanhã</string>
    <string name="next_classes">Próximas aulas</string>
    <string name="submit">Enviar</string>
    <string name="right_answer">Resposta correta</string>
    <string name="wrong_answer">Resposta errada</string>
    <string name="quiz_result">Resultado do quiz</string>
    <string name="happy_face">rosto feliz</string>
    <string name="total_points">Total de pontos</string>
    <string name="correct">Correto</string>
    <string name="wrong">Errado</string>
    <string name="sad_face">rosto triste</string>
    <string name="leader_board">Placar de líderes</string>
    <string name="all_players">Todos os jogadores</string>
    <string name="crown">coroa</string>
    <string name="no_next_class_message">É a última aula deste módulo, vá para o próximo e parabéns!</string>
    <string name="lesson_6">Aula 6</string>
    <string name="lesson_7">Aula 7</string>
    <string name="lesson_8">Aula 8</string>
    <string name="lesson_9">Aula 9</string>
    <string name="lesson_10">Aula 10</string>
    <string name="lesson_11">Aula 11</string>
    <string name="lesson_12">Aula 12</string>
    <string name="lesson_13">Aula 13</string>
    <string name="lesson_14">Aula 14</string>
    <string name="goals">Metas</string>
    <string name="in_progress">Em progresso</string>
    <string name="done">Concluído</string>
    <string name="goal_one">Você teve um bom resultado no seu primeiro quiz, parabéns! Você ganhou 10 pontos!</string>
    <string name="goal_two">Você concluiu o módulo introdutório, parabéns! Você ganhou 20 pontos!</string>
    <string name="goal_three">Você concluiu o módulo de organizar casa, parabéns! Você ganhou 20 pontos!</string>
    <string name="goal_four">Você concluiu o módulo de hora da ação, parabéns! Você ganhou 20 pontos!</string>
    <string name="goal_five">Você concluiu o módulo extra, parabéns! Você ganhou 20 pontos!</string>
    <string name="goal_six">Você jogou uma partida de quiz online! Você ganhou 50 pontos!</string>
    <string name="all_goals_were_done_congratulations">Todas as metas foram concluídas, parabéns!</string>
    <string name="goal_notification_title">Meta concluída</string>
    <string name="room_code">Código da sala</string>
    <string name="create_a_quiz_room">Criar uma sala</string>
    <string name="or">Ou</string>
    <string name="create">Criar</string>
    <string name="join">Entrar</string>
    <string name="waiting_another_player">Aguardando outro jogador...</string>
    <string name="start_game">Iniciar jogo</string>
    <string name="the_code_room_is">Código da Sala: %d</string>
    <string name="player_arrived">Jogador chegou, inicie o jogo!</string>
    <string name="waiting_owner_start_game">Aguardando o dono da sala iniciar o jogo!</string>
    <string name="owner_exit_room">Dono saiu da sala, desculpe! :(</string>
    <string name="game_result">Resultado do jogo</string>
    <string name="winner">Vencedor</string>
    <string name="winner_description">Você venceu, parabéns!</string>
    <string name="what_s_your_question">Qual a próxima questão?</string>
    <string name="choose_theme">Escolha o tema</string>
    <string name="select_option">Selecione a opção</string>
</resources>