<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_classes_item"
    android:paddingHorizontal="15dp"
    android:paddingVertical="10dp"
    android:layout_marginBottom="3dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/video_icon"
        android:contentDescription="@string/video_icon" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_toEndOf="@+id/image"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/text_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Introduction about finance education"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_below="@+id/text_title"
        android:layout_toEndOf="@+id/image"
        android:layout_marginStart="15dp"/>

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/arrow"
        android:src="@drawable/arrow_forward" />

</RelativeLayout>