<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_goals"
    android:padding="15dp"
    tools:context=".fragments.goals.GoalsFragment">

    <Button
        android:id="@+id/button_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="100dp"
        android:layout_height="86dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/text_goals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/goals"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:textColor="@color/subtitlesColor"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:layout_constraintEnd_toStartOf="@+id/button_in_progress"/>

    <Button
        android:id="@+id/button_in_progress"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="@drawable/background_position"
        android:text="@string/in_progress"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/text_goals"
        app:layout_constraintEnd_toStartOf="@+id/button_done"
        app:layout_constraintStart_toEndOf="@+id/text_goals"
        app:layout_constraintTop_toTopOf="@+id/text_goals" />

    <Button
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="@drawable/background_position"
        android:text="@string/done"
        android:textColor="@color/background_progress_running"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/text_goals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_in_progress"
        app:layout_constraintTop_toTopOf="@+id/text_goals" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:paddingVertical="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/navigation_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_goals"
        tools:itemCount="3"
        tools:listitem="@layout/goals_item" />

    <TextView
        android:id="@+id/no_goals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/all_goals_were_done_congratulations"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0.4"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_goals" />

    <ImageView
        android:id="@+id/smile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_smile"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_goals" />

    <include
        android:id="@+id/navigation_menu"
        layout="@layout/navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
