<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ranking_bg"
    android:paddingVertical="10dp"
    android:paddingHorizontal="20dp"
    tools:context=".fragments.ranking.RankingFragment">

    <Button
        android:id="@+id/button_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leader_board"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back" />

    <ImageView
        android:id="@+id/crown"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/crown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:contentDescription="@string/crown" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_first"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/profile_pic"
        app:layout_constraintEnd_toEndOf="@+id/crown"
        app:layout_constraintStart_toStartOf="@+id/crown"
        app:layout_constraintTop_toBottomOf="@+id/crown" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_second"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/profile_pic"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/user_third"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@+id/user_first" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_third"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/profile_pic"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_second"
        app:layout_constraintTop_toBottomOf="@+id/user_first" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_players"
        android:textColor="@color/subtitlesColor"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_second" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation_menu"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="3"
            tools:listitem="@layout/class_item"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <include
        android:id="@+id/navigation_menu"
        layout="@layout/navigation_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>